Fixed contrast issue in nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,7 @@ nav li {
   margin: 0.5rem;
 }
 nav .active {
-  color: #e55252;
+  color: #ffb4b4;
   font-weight: 500;
 }
 
